# round-robin-scheduler

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  Doxyfile  Makefile  README.md  STM32F411RETX_FLASH.ld  main.c  pyproject.toml
Inc/: misc.h  scb.h  scheduler.h  stm32f4xx_conf.h  tasks.h  uart.h
Src/: scb.c  scheduler.c  syscalls.c  tasks.c  uart.c
Startup/: startup_stm32f411.c
