[tool.poetry]
name = "task-scheduler"
version = "0.1.0"
description = ""
authors = ["Jacob Zarnstorff <jacobzarnstorff@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
